updates made to the home page: first commitment to the home branch

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,6 +8,162 @@
     <title>Ramone Graham</title>
   </head>
   <body>
+    <!-- Page environment -->
+    <div class="work-environment" id="page-top">
+      <!-- navigation section -->
+      <nav class="nav-container">
+        <p class="name">Ramone Graham</p>
+        <a href="#about" class="nav-about">About</a>
+        <a href="#experience" class="nav-experience">Experience</a>
+        <a href="#projects" class="nav-projects">Projects</a>
+        <a href="#contact" class="nav-contact">Contact</a>
+      </nav>
+
+      <!-- About Section -->
+
+      <section class="about" id="about">
+        <!-- description -->
+        <div class="about-description">
+          <div class="heading">Hello, I&#39;m Ramone,</div>
+          <div class="subheading">Lead Engineer at Upstatement</div>
+        </div>
+
+        <div class="about__paragraph--one">
+          I build accessible, inclusive products and digital experiences for the
+          web.
+        </div>
+        <div class="about__paragraph--two">
+          Back in 2012, I decided to try my hand at creating custom Tumblr
+          themes and tumbled head first into the rabbit hole of coding and web
+          development. Fast-forward to today, and I&#39;ve had the privilege of
+          building software for an
+          <a href="https://us.mullenlowe.com/">advertising agency</a> , a
+          <a href="https://starry.com/">start-up</a>, a
+          <a href="https://scout.camd.northeastern.edu/"
+            >student-led design studio</a
+          >, and a
+          <a href="https://www.apple.com/apple-music/">huge corporation</a>.
+        </div>
+        <div class="about__paragraph--three">
+          My main focus these days is building products and leading projects for
+          our clients at <a href="https://upstatement.com/">Upstatement</a>. In
+          my free time I've also released an
+          <a href="https://www.newline.co/courses/build-a-spotify-connected-app"
+            >online video course</a
+          >
+          that covers everything you need to know to build a web app with the
+          Spotify API.
+        </div>
+
+        <!-- image -->
+        <div class="about-image-wrapper">
+          <div class="colored">
+            <img
+              src="../resources/images/hero-colored/img-color.png"
+              alt="colored image"
+              class="img-col"
+            />
+            <img
+              src="../resources/images/hero-colored/Ellipse stroke-small.png"
+              alt="ellipse stroke small"
+              class="circle-stroke-small"
+            />
+            <img
+              src="../resources/images/hero-colored/Ellipse fill-small.png"
+              alt="ellipse filled small"
+              class="circle-fill-small"
+            />
+          </div>
+          <div class="black-white">
+            <img
+              src="../resources/images/hero-bw/image-bw.png"
+              alt="bw image"
+              class="img-bw"
+            />
+            <img
+              src="../resources/images/hero-bw/Ellipse stroke-large.png"
+              alt="ellipse stroke large"
+              class="circle-stroke-large"
+            />
+            <img
+              src="../resources/images/hero-bw/Ellipse fill-large.png"
+              alt="ellipse fill large"
+              class="circle-fill-large"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- ABS POS  -->
+      <!-- social icons: This will be Absolutely positioned -->
+      <div class="social-reach">
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
+        <a href=""><i class="fa-brands fa-github"></i></a>
+        <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+        <a href=""><i class="fa-brands fa-twitter"></i></a>
+        <a href=""><i class="fa-brands fa-dev"></i></a>
+      </div>
+
+      <!--Circle Up-->
+      <div class="circleup">
+        <a href="#page-top">
+          <svg
+            width="42"
+            height="42"
+            viewBox="0 0 42 42"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <rect
+              x="1"
+              y="1"
+              width="40"
+              height="40"
+              rx="20"
+              stroke="#ABFF69"
+              stroke-width="2"
+            />
+            <path
+              d="M21 28V14"
+              stroke="#ABFF69"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M14 21L21 14L28 21"
+              stroke="#ABFF69"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </a>
+      </div>
+
+      <!-- Experience Section -->
+
+      <section class="experience" id="experience">
+        <!-- section heading -->
+        <div class="experience__section--heading">
+          <p>Experience</p>
+          <button class="go-to-resume">
+            View Full Résumé <i class="fa-solid fa-arrow-right"></i>
+          </button>
+        </div>
+
+        <!-- section-body -->
+        <div class="experience-body"></div>
+      </section>
+
+      <!-- Projects Section -->
+
+      <section class="projects" id="projects"></section>
+
+      <!-- Contact Section -->
+
+      <section class="contact" id="contact"></section>
+    </div>
     <!-- all scripts -->
     <script
       src="https://kit.fontawesome.com/0558da4608.js"
