most recent updates to home page

--- a/pages/index.html
+++ b/pages/index.html
@@ -151,6 +151,88 @@
             View Full Résumé <i class="fa-solid fa-arrow-right"></i>
           </button>
         </div>
+        <!-- experience left -->
+        <div class="experience__left">
+          <!-- 2019 -->
+            <div class="2019">
+              <div class="title__one">
+              <p class="lead">Lead Engineer <span class="dot">&#x2022</span> Upstatement</p>
+              <p class="senior-engineer">Senior Engineer</p>
+              <p class="engineer">Engineer</p>
+              </div>
+              <div class="description__one">
+                Deliver high-quality, robust production code for a diverse 
+                array of projects for clients including Harvard Business 
+                School, Everytown for Gun Safety, Pratt Institute, Koala 
+                Health, Vanderbilt University, The 19th News, and more. 
+                Provide leadership within engineering department through 
+                close collaboration, knowledge shares, and mentorship.
+              </div>
+              <div class="technologies">
+                <button class="tools">React</button>
+                <button class="tools">React Native</button>
+                <button class="tools">SCSS</button>
+                <button class="tools">WordPress</button><br>
+                <button class="tools">JavaScript</button>
+                <button class="tools">TypeScript</button>
+                <button class="tools">PHP</button>
+              </div>
+            </div>
+            <!-- 2020 -->
+            <div class="year__2020">2020</div>
+
+            <!-- 2021 -->
+            <div class="2021">
+              <div class="title__three">
+              <p class="lead">UI Engineer Co-Op <span class="dot">&#x2022</span> Apple</p>
+              </div>
+              <div class="description__three">
+                Developed and styled interactive web apps for Apple 
+                Music, including the UI of Apple Music&#39;s embeddable web 
+                player widget for in-browser user authorization and full 
+                song playback.
+              </div>
+              <div class="technologies">
+                <button class="tools">Ember</button>
+                <button class="tools">SCSS</button>
+                <button class="tools">JavaScript</button>
+                <button class="tools">MusicKit.js</button>
+              </div>
+            </div>
+        </div>
+
+        <!-- experience middle -->
+        <div class="experience__middle">
+          <i class="fa-solid fa-circle"></i>
+          <i class="fa-solid fa-circle"></i>
+          <i class="fa-solid fa-circle"></i>
+        </div>
+
+        <!-- experience right -->
+        <div class="experience__right">
+          <!-- 2019 -->
+          <div class="year__2019">2019</div>
+
+          <!-- 2020 -->
+          <div class="2020">
+              <div class="two">
+              <p class="lead">UI Engineer Co-Op <span class="dot">&#x2022</span> Apple</p>
+              </div>
+              <div class="description__two">
+                Developed and styled interactive web apps for Apple 
+                Music, including the UI of Apple Music&#39;s embeddable web 
+                player widget for in-browser user authorization and full 
+                song playback.
+              </div>
+              <div class="technologies">
+                <button class="tools">Ember</button>
+                <button class="tools">SCSS</button>
+                <button class="tools">JavaScript</button>
+                <button class="tools">MusicKit.js</button>
+              </div>
+        </div>
+        <!-- 2021 -->
+          <div class="year__2021">2021</div>
 
         <!-- section-body -->
         <div class="experience-body"></div>
@@ -158,11 +240,61 @@
 
       <!-- Projects Section -->
 
-      <section class="projects" id="projects"></section>
+      <section class="projects" id="projects">
+        <!-- section heading -->
+        <div class="experience__section--heading">
+          <p>Projects</p>
+          <button class="go-to-resume">
+            View Full Project Archive <i class="fa-solid fa-arrow-right"></i>
+          </button>
+        </div>
+      </section>
 
       <!-- Contact Section -->
 
-      <section class="contact" id="contact"></section>
+      <section class="contact" id="contact">
+        <p class="contact-us">Contact</p>
+        <div class="social-footer"></div>
+        <div class="footer-contact-us">
+          <form action="submit">
+            <!-- firstname -->
+            <label for="firstName">First Name</label>
+            <input
+              type="text"
+              id="firstName"
+              placeholder="Enter your full name"
+            />
+            <!-- lastname -->
+            <label for="lastName">Last Name</label>
+            <input
+              type="text"
+              id="lastName"
+              placeholder="Enter your full name"
+            />
+            <!-- email -->
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="Enter your email" />
+            <!-- phone number -->
+            <label for="phone-number">Phone Number</label>
+            <span class="caret-number">US</span
+            ><i class="fa-solid fa-angle-down"></i>
+            <input
+              type="number"
+              id="phone number"
+              placeholder="+1(555) 000 0000"
+            />
+            <label for="message"> Message </label>
+            <textarea
+              name="text-message"
+              id="message"
+              cols="60"
+              rows="10"
+              placeholder="Enter your message"
+            ></textarea>
+            <input type="submit" />
+          </form>
+        </div>
+      </section>
     </div>
     <!-- all scripts -->
     <script
