mark-up and design complete for home screen, mobile and tablet views to be done

--- a/pages/index.html
+++ b/pages/index.html
@@ -195,9 +195,11 @@
                 <a href="#" class="tools">React Native</a>
                 <a href="#" class="tools">SCSS</a>
                 <a href="#" class="tools">WordPress</a><br>
+                <div class="new-line">
                 <a href="#" class="tools">JavaScript</a>
                 <a href="#" class="tools">TypeScript</a>
                 <a href="#" class="tools">PHP</a>
+                </div>
               </div>
             </div>
             <!-- 2020 -->
@@ -225,9 +227,13 @@
 
         <!-- experience middle -->
         <div class="experience__middle">
-          <i class="fa-solid fa-circle"></i>
-          <i class="fa-solid fa-circle"></i>
-          <i class="fa-solid fa-circle"></i>
+          <i class="fa-solid fa-circle fa-one"></i>
+          <i class="fa-solid fa-circle fa-two"></i>
+          <i class="fa-solid fa-circle fa-three"></i>
+        </div>
+        <div class="line">
+          <svg width="2" height="675" viewBox="0 0 2 715" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <line x1="0.75" y1="3.27835e-08" x2="0.749969" y2="715" stroke="#ABFF69" stroke-width="1.5"/>
         </div>
 
         <!-- experience right -->
@@ -252,6 +258,7 @@
                 <a href="#" class="tools">JavaScript</a>
                 <a href="#" class="tools">MusicKit.js</a>
               </div>
+              
         </div>
         <!-- 2021 -->
           <div class="year__2021">2021</div>
