--- a/pages/project-archive.html
+++ b/pages/project-archive.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/general-styles.css" />
     <link rel="stylesheet" href="../styles/app-projects.css" />
+    <link rel="stylesheet" href="../styles/fixed.css" />
     <title>All Projects</title>
   </head>
   <body>
@@ -98,6 +99,43 @@
       </div>
 
       <!-- end of webpage-container -->
+    </div>
+
+    <!--Circle Up-->
+    <div class="circleup">
+      <a href="#page-top">
+        <svg
+          width="42"
+          height="42"
+          viewBox="0 0 42 42"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <rect
+            x="1"
+            y="1"
+            width="40"
+            height="40"
+            rx="20"
+            stroke="#ABFF69"
+            stroke-width="2"
+          />
+          <path
+            d="M21 28V14"
+            stroke="#ABFF69"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+          <path
+            d="M14 21L21 14L28 21"
+            stroke="#ABFF69"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </a>
     </div>
 
     <!-- all scripts -->
