updates to all-projects

--- a/pages/project-archive.html
+++ b/pages/project-archive.html
@@ -44,12 +44,11 @@
           Link <i class="fa-solid fa-caret-down"></i>
         </div>
       </div>
-      <hr class="column-hr" />
 
       <!-- PROJECT LIST -->
 
       <!-- Projects -->
-
+      <hr class="column-hr" />
       <div class="project__wrapper">
         <!-- data for all projects -->
         <div class="project__data">
@@ -95,7 +94,6 @@
             </a>
           </div>
         </div>
-        <hr class="project-hr" />
       </div>
 
       <!-- end of webpage-container -->
@@ -144,5 +142,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="../script/filter.js"></script>
+    <script src="../script/data.js"></script>
   </body>
 </html>
