changes saved for all-projects, ready to be merged with main

--- a/pages/project-archive.html
+++ b/pages/project-archive.html
@@ -48,7 +48,7 @@
       <!-- PROJECT LIST -->
 
       <!-- Projects -->
-      <hr class="column-hr" />
+      <hr class="project-hr" />
       <div class="project__wrapper">
         <!-- data for all projects -->
         <div class="project__data">
