updates to mobile__v--home brach that will be merged with the main branch

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/home.css">
     <link rel="stylesheet" href="../styles/contact.css">
     <link rel="stylesheet" href="../styles/animations.css">
+    <link rel="stylesheet" href="../styles/home__mobile.css">
     <title>Ramone Graham</title>
   </head>
   <body>
@@ -18,7 +19,23 @@
       
       <!-- navigation section -->
       <nav class="nav-container">
-        <div><p class="name">Ramone Graham</p></div>
+        <p class="name">Ramone Graham</p>
+        <!-- navigation bar -->
+        <div class="hamburger">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+        <div class="times-burger">
+          &times;
+        </div>
+        <div class="menu-items-dropdown">
+          <div class="mobile-menu">
+            <a href="#about" class="nav-about">About</a>
+            <a href="#experience" class="nav-experience">Experience</a>
+            <a href="#projects" class="nav-projects">Projects</a>
+            <a href="#contact" class="nav-contact">Contact</a>
+          </div>
+        </div>
+        
         <div class="menu-items">
         <a href="#about" class="nav-about">About</a>
         <a href="#experience" class="nav-experience">Experience</a>
