--- a/pages/project-archive.html
+++ b/pages/project-archive.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styles/general-styles.css" />
     <link rel="stylesheet" href="../styles/app-projects.css" />
     <link rel="stylesheet" href="../styles/fixed.css" />
+    <link rel="stylesheet" href="../styles/home__mobile.css" />
     <title>All Projects</title>
   </head>
   <body>
@@ -20,8 +21,12 @@
         <div class="title">All Projects</div>
         <div class="filter">
           <p class="filter__by">Filter by</p>
-          <button class="complete">Complete</button>
-          <button class="in__progress">In Progress</button>
+          <button id="filter__complete" class="complete inactive">
+            Complete
+          </button>
+          <button id="filter__in--progress" class="in__progress inactive">
+            In Progress
+          </button>
         </div>
       </div>
 
@@ -45,63 +50,19 @@
         </div>
       </div>
 
+      <div class="place_holding">Filter</div>
+
       <!-- PROJECT LIST -->
 
       <!-- Projects -->
-      <hr class="project-hr" />
-      <div class="project__wrapper">
-        <!-- data for all projects -->
-        <div class="project__data">
-          <div class="project__year">2022</div>
-          <div class="project__project">
-            Harvard Business School Design System
-          </div>
-          <div class="project__made--at">Upstatement</div>
-          <div class="project__build--by">
-            <div><a href="#" class="build_by_link">Storybook</a></div>
-            <div><a href="#" class="build_by_link">React</a></div>
-            <div><a href="#" class="build_by_link">TypeScript</a></div>
-            <div><a href="#" class="build_by_link">Python</a></div>
-            <div><a href="#" class="build_by_link">Bash</a></div>
-            <div><a href="#" class="build_by_link">JavaScript</a></div>
-            <div><a href="#" class="build_by_link">Terminal</a></div>
-          </div>
-          <div class="project__link">
-            <a href="#">
-              apps.apple.com
-              <svg
-                width="12"
-                height="12"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M7 17L17 7"
-                  stroke="white"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  d="M17 17L17 7L7 7"
-                  stroke="white"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </a>
-          </div>
-        </div>
-      </div>
 
-      <!-- end of webpage-container -->
+      <div class="project__wrapper" id="projectWrapper"></div>
+      <div class="ip_projectWrapper"></div>
     </div>
 
     <!--Circle Up-->
     <div class="circleup">
-      <a href="#page-top">
+      <a href="#webpage-container">
         <svg
           width="42"
           height="42"
